# Learn-GenAI

./: .gitignore  README.md  _toc.yml  consumer.py  data_loaders_langchain.ipynb  data_loaders_llamaindex.ipynb  docker-compose copy.yml  docker-compose.yml  instruction_dataset.jsonl  intro.md  introduction.ipynb  kafka_ingestion.ipynb  llm_data_large_chunks.jsonl  llm_data_medium_chunks.jsonl  llm_data_small_chunks.jsonl  markdown-notebooks.md  markdown.md  notes.ipynb  producer.py  pyproject.toml  rag_pipeline_database.ipynb
MultiModal/: 01_part.ipynb  02_part.ipynb  03_part.ipynb  04_part.ipynb  05_part.ipynb  06_part.ipynb  07_part.ipynb  08_part.ipynb  overview.ipynb
architectures/: 01_part.ipynb  02_part.ipynb  03_part.ipynb  04_part.ipynb  05_part.ipynb  06_part.ipynb  07_part.ipynb  overview.ipynb
embeddings/: 01_part.ipynb  02_part.ipynb  03_part.ipynb  04_part.ipynb  05_part.ipynb  06_part.ipynb  07_part.ipynb  08_part.ipynb
introductory/: 01_part.ipynb  02_part.ipynb  03_part.ipynb
krish/: 1-chatbots.ipynb
krish/AWS-Bedrock-main/: README.md
krish/Generative-AI-With-Cloud-main/: README.md
llamaindex/: 01_part.ipynb  02_part.ipynb  data_loader.py  overview.ipynb
llamaindex/.ipynb_checkpoints/: 01_part-checkpoint.ipynb  overview-checkpoint.ipynb
llm/: inference_testing.ipynb  overview.ipynb
llm/data_ingestion/: 01_part.ipynb  02_part.ipynb  03_part.ipynb  04_part.ipynb  05_part.ipynb  06_part.ipynb  07_part.ipynb  08_part.ipynb  09_part.ipynb  10_part.ipynb  11_part.ipynb  12_part.ipynb  (+8 more)
rag/: 01_part.ipynb  02_part.ipynb  overview.ipynb
(+18 files in other folders)
