[project]
name = "learn-genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "faiss-cpu>=1.13.0",
    "huggingface>=0.0.1",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "jupyter-book>=2.0.2",
    "kernel>=0.20.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "langgraph>=1.0.3",
    "llama-index>=0.14.8",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-readers-web>=0.5.6",
    "numpy>=2.3.5",
    "pandas>=2.2.3",
    "sentence-transformers>=5.1.2",
    "tabulate>=0.9.0",
    "tensorflow>=2.20.0",
    "tensorvision>=0.1.dev2",
    "tf-keras>=2.20.1",
    "torch>=2.9.1",
]
